Create DM interaction

--- a/secret-config-base.json
+++ b/secret-config-base.json
@@ -3,5 +3,6 @@
     "DB_NAME": "",
     "DB_USER": "",
     "DB_PASSWORD": "",
-    "ENVIRONMENT": "MACOS"
+    "ENVIRONMENT": "MACOS",
+    "OPENAI_API_KEY": ""
 }
