--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "langchain": "^0.0.175",
     "morgan": "~1.9.1",
     "mysql2": "^3.6.2",
     "openai": "^4.14.1"
