Implement Polly TTS

--- a/secret-config-base.json
+++ b/secret-config-base.json
@@ -3,6 +3,8 @@
     "DB_NAME": "",
     "DB_USER": "",
     "DB_PASSWORD": "",
-    "ENVIRONMENT": "MACOS",
-    "OPENAI_API_KEY": ""
+    "ENVIRONMENT": "",
+    "OPENAI_API_KEY": "",
+    "AWS_ACCESS_KEY_ID": "",
+    "AWS_SECRET_ACCESS_KEY": ""
 }
