--- a/secret-config-base.json
+++ b/secret-config-base.json
@@ -6,5 +6,8 @@
     "ENVIRONMENT": "",
     "OPENAI_API_KEY": "",
     "AWS_ACCESS_KEY_ID": "",
-    "AWS_SECRET_ACCESS_KEY": ""
+    "AWS_SECRET_ACCESS_KEY": "",
+    "USER": "",
+    "PASS": "",
+    "SESSION_KEY": ""
 }
