--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.12.2",
     "cookie-parser": "~1.4.7",
     "cors": "^2.8.5",
     "debug": "~4.4.3",
