--- a/secret-config-base.json
+++ b/secret-config-base.json
@@ -9,5 +9,7 @@
     "AWS_SECRET_ACCESS_KEY": "",
     "USER": "",
     "PASS": "",
-    "SESSION_KEY": ""
+    "SESSION_KEY": "",
+    "PFC3_URL": "",
+    "PFC3_API_KEY": ""
 }
